--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,109 @@
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.7
 version = '1.0'
+[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
-repositories {
-    mavenCentral()
+
+
+
+allprojects {
+    apply plugin: 'idea'
+
+    idea {
+        module {
+            inheritOutputDirs = false
+            outputDir = file("$buildDir/classes/main/")
+        }
+    }
+
+    repositories {
+        mavenLocal()
+        maven {
+            url "http://192.168.1.110:8888/nexus/content/groups/public/"
+        }
+        mavenCentral()
+    }
+
+
 }
-
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+
+}
+
+ext {
+//    profile = project['profile']
+    profile = 'development'
+    springVersion='4.1.2.RELEASE'
+    slf4jversion='1.6.6'
+    codehaus_jackson_version='1.9.13'
+    fasterxml_jackson_version='2.4.4'
+}
+
+def loadGroovyConfig(){
+    def configFile = file('conf/config.groovy')
+    new ConfigSlurper(profile).parse(configFile.toURL()).toProperties()
+}
+
+//task replace(type: Sync) {
+//    def configHome = "${project.rootDir}/config"
+//
+//    from(configHome) {
+//        include '**/*.properties'
+//        include '**/*.xml'
+//        filter org.org.apache.tools.ant.filters.ReplaceTokens,
+//                tokens: loadGroovyConfig()
+//    }
+//    into "${buildDir}/resources/main"
+//}
+
+processResources {
+    from(sourceSets.main.resources.srcDirs) {
+        filter(org.apache.tools.ant.filters.ReplaceTokens,
+                tokens: loadGroovyConfig()
+        )
+    }
+}
+
+
+subprojects {
+    apply plugin: 'java'
+    apply plugin: 'groovy'
+    [compileJava, compileTestJava, compileGroovy, compileTestGroovy]*.options*.encoding = 'UTF-8'
+
+    dependencies {
+        compile(
+                "org.projectlombok:lombok:1.14.8",
+                "org.springframework:spring-context:${springVersion}",
+                "org.codehaus.groovy:groovy-all:2.3.10"
+        )
+        testCompile (
+                'junit:junit:4.11'
+        )
+    }
+
+    repositories {
+        mavenLocal()
+        maven {
+            url "http://192.168.1.110:8888/nexus/content/groups/public/"
+        }
+        mavenCentral()
+    }
+
+
+}
+
+
+
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '2.4'
+    //2.2.1
+//    archiveBase = 'PROJECT'
+//    archivePath = 'gradle/dists'
+}
+
+task testP {
+    println profile
 }
