--- a/iog-service/build.gradle
+++ b/iog-service/build.gradle
@@ -3,4 +3,5 @@
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile project(':project-framework')
+    compile project(':project-common')
 }
