--- a/project-dao/build.gradle
+++ b/project-dao/build.gradle
@@ -1,14 +1,28 @@
 
+
+
+processResources {
+    from(sourceSets.main.resources.srcDirs) {
+        filter(org.apache.tools.ant.filters.ReplaceTokens,
+                tokens: loadGroovy()
+        )
+    }
+}
+
 dependencies {
     compile(
             "org.mybatis:mybatis:3.2.2",
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "org.springframework:spring-jdbc:${springVersion}",
             "org.codehaus.jackson:jackson-core-asl:${codehaus_jackson_version}",
             "org.codehaus.jackson:jackson-mapper-asl:${codehaus_jackson_version}",
             "com.fasterxml.jackson.core:jackson-annotations:${fasterxml_jackson_version}",
-            "com.fasterxml.jackson.core:jackson-databind:${fasterxml_jackson_version}"
+            "com.fasterxml.jackson.core:jackson-databind:${fasterxml_jackson_version}",
+            project(':project-framework'),
+            "com.github.pagehelper:pagehelper:3.7.3",
+            "com.github.jsqlparser:jsqlparser:0.9.1"
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
