--- a/spinnaker/build.gradle
+++ b/spinnaker/build.gradle
@@ -1,4 +1,5 @@
 
+
 dependencies {
     compile (
             "commons-httpclient:commons-httpclient:3.1",
@@ -7,11 +8,13 @@ dependencies {
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
             "org.springframework:spring-jdbc:${springVersion}",
-
-
+            "com.github.pagehelper:pagehelper:3.7.3",
             project(':project-common'),
             project(':iog-service'),
             project(':project-dao')
     )
+
+
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
