--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ version = '1.0'
 
 allprojects {
     apply plugin: 'idea'
+	apply plugin: 'java'
 	apply plugin: 'eclipse'
     idea {
         module {
