--- a/iog-web-container/build.gradle
+++ b/iog-web-container/build.gradle
@@ -1,5 +1,15 @@
+buildscript {
+	repositories {
+		jcenter()
+	}
+	dependencies {
+	  classpath "org.akhikhl.gretty:gretty:+"
+	}
+  }
+
 apply plugin: 'war'
 apply plugin: 'jetty'
+//apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
 
 
