--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,9 @@ subprojects {
                 "org.springframework:spring-context:${springVersion}",
                 "org.codehaus.groovy:groovy-all:2.3.10",
                 "org.slf4j:slf4j-api:${slf4j_version}",
-                "org.slf4j:slf4j-log4j12:${slf4j_version}"
+                "org.slf4j:slf4j-log4j12:${slf4j_version}",
+                "org.mongodb:mongo-java-driver:3.0.0-rc1",
+                "org.log4mongo:log4mongo-java:0.7.4"
         )
         testCompile (
                 'junit:junit:4.11'
