--- a/apennine/build.gradle
+++ b/apennine/build.gradle
@@ -1,20 +1,20 @@
 
 
 dependencies {
-    compile (
+    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile project(':project-framework')
+    compile project(':project-common')
+    compile project(':iog-service')
+    compile project(':project-dao')
+    compile(
             "commons-httpclient:commons-httpclient:3.1",
-            "org.mybatis:mybatis:3.2.2",
-            "org.mybatis:mybatis-spring:1.2.0",
-            "mysql:mysql-connector-java:5.1.21",
-            "commons-dbcp:commons-dbcp:1.4",
-            "org.springframework:spring-jdbc:${springVersion}",
-            "com.github.pagehelper:pagehelper:3.7.3",
-            project(':project-common'),
-            project(':iog-service'),
-            project(':project-dao')
+            "org.apache.httpcomponents:httpclient:4.1.1",
+            "net.sf.json-lib:json-lib:2.2:jdk15",
+            "org.apache.poi:poi:3.0.1-FINAL",
+            "com.google.code.gson:gson:2.2.2",
+            "redis.clients:jedis:${jedis_version}"
     )
 
 
 
-    testCompile group: 'junit', name: 'junit', version: '4.11'
 }
