--- a/apennine/build.gradle
+++ b/apennine/build.gradle
@@ -14,6 +14,7 @@ dependencies {
             "com.google.code.gson:gson:2.2.2",
             "org.projectlombok:lombok:1.14.8",
             "redis.clients:jedis:${jedis_version}",
+            "com.thoughtworks.xstream:xstream:1.4.7",
             project(':project-framework'),
             project(':project-common'),
             project(':iog-service'),
