对象转换完成，测试部分

--- a/apennine/build.gradle
+++ b/apennine/build.gradle
@@ -18,7 +18,9 @@ dependencies {
             project(':project-framework'),
             project(':project-common'),
             project(':iog-service'),
-            project(':project-dao')
+            project(':project-dao'),
+            project(':iog-common-product')
+            /*project(':iog-web-container')*/
     )
 
 
