--- a/iog-web-container/build.gradle
+++ b/iog-web-container/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     providedCompile ("javax.servlet:javax.servlet-api:3.1.0")
     compile project(':project-common')
     compile project(':spinnaker')
+    compile project(':apennine')
 }
