--- a/coach/build.gradle
+++ b/coach/build.gradle
@@ -2,8 +2,10 @@ apply plugin: 'java'
 dependencies{
 	compile(
 		"com.google.code.gson:gson:2.3.1",
-		'com.thoughtworks.xstream:xstream:1.4.8'		
+		"com.alibaba:fastjson:1.2.6"		
 		)
+	compile project(":iog-service")
+	compile project(":iog-common-product")
 	compile project(":project-common")
 	compile project(":project-framework")
 }
