--- a/coltorti/src/main/resources/log4j.properties
+++ b/coltorti/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 # Categories and levels
 #######################################################################
 #Appender Configuration
-log4j.rootLogger=DEBUG, FileApp, ConApp
+log4j.rootLogger=DEBUG, FileApp, ConApp,FileWarn
 
 log4j.logger.java.sql.Connection = ERROR  
 log4j.logger.java.sql.Statement = ERROR  
@@ -26,12 +26,22 @@ log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 # FileApp
 log4j.appender.FileApp.Threshold=ERROR
 log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
-log4j.appender.FileApp.file=/usr/local/iog.log
+log4j.appender.FileApp.file=coltorti-error.log
 log4j.appender.FileApp.MaxFileSize=2000KB
 log4j.appender.FileApp.MaxBackupIndex=1
 #log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
 log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout 
-log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
+log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
+
+log4j.logger.FileWarn=warn
+log4j.appender.FileWarn.Threshold=WARN
+log4j.appender.FileWarn=org.apache.log4j.RollingFileAppender
+log4j.appender.FileWarn.file=coltorti-warn.log
+log4j.appender.FileWarn.MaxFileSize=2000KB
+log4j.appender.FileWarn.MaxBackupIndex=1
+#log4j.appender.FileWarn.DatePattern='.'yyyy-MM-dd 
+log4j.appender.FileWarn.layout=org.apache.log4j.PatternLayout 
+log4j.appender.FileWarn.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
 
 #log4j.logger.org.jboss.cache=debug
 logging.level.org.springframework=info
