--- a/project-dao/src/main/resources/datasource.properties
+++ b/project-dao/src/main/resources/datasource.properties
@@ -1,8 +1,4 @@
-
-db.username=@db.username@
-db.password=@db.password@
-db.url=@db.url@
-db.driverClassName=@db.driverClassName@
-
-
-
+db.username=root
+db.password=123456
+db.url=jdbc:mysql://192.168.20.82:3306/iog?useUnicode=true&amp;characterEncoding=utf-8
+db.driverClassName=org.mysql.jdbc.Driver
