--- a/project-dao/src/main/resources/datasource.properties
+++ b/project-dao/src/main/resources/datasource.properties
@@ -1,4 +1,4 @@
 db.username=root
 db.password=123456
 db.url=jdbc:mysql://192.168.20.82:3306/iog?useUnicode=true&amp;characterEncoding=utf-8
-db.driverClassName=org.mysql.jdbc.Driver
+db.driverClassName=com.mysql.jdbc.Driver
