--- a/iog-web-container/src/main/webapp/WEB-INF/web.xml
+++ b/iog-web-container/src/main/webapp/WEB-INF/web.xml
@@ -14,7 +14,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <!-- spring 纯注解-->
-        <param-value>com.shangpin.iog.webcontainer.front.conf.AppContext</param-value>
+        <param-value>com.shangpin.iog.app.AppContext</param-value>
         <!--<param-value>classpath*:META-INF/spring/*.xml</param-value>-->
     </context-param>
 
