--- a/iog-web-container/build.gradle
+++ b/iog-web-container/build.gradle
@@ -27,6 +27,5 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     providedCompile ("javax.servlet:javax.servlet-api:3.1.0")
     compile project(':project-common')
-    compile project(':spinnaker')
-    compile project(':apennine')
+    compile project(':iog-common-product')
 }
