--- a/iog-web-container/build.gradle
+++ b/iog-web-container/build.gradle
@@ -21,7 +21,8 @@ dependencies {
             "commons-lang:commons-lang:2.3",
             "net.sourceforge.jtds:jtds:1.2.4",
             "commons-fileupload:commons-fileupload:1.3.1",
-            "commons-io:commons-io:1.4"
+            "commons-io:commons-io:1.4",
+            "taglibs:standard:1.1.2"
 
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
