--- a/project-dao/build.gradle
+++ b/project-dao/build.gradle
@@ -26,3 +26,12 @@ dependencies {
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+task copyResources( type: Copy ) {
+    into "$buildDir/classes/main"
+    from "$buildDir/resources/main"
+}
+
+jar{
+    dependsOn copyResources
+}
