抽象更新主站库存

--- a/openapi-ice/build.gradle
+++ b/openapi-ice/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     compile(
-            "ZeroC:Ice:3.5.1"
+            "ZeroC:Ice:3.5.1",
+			project(":project-framework")
     )
 }
