--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,7 @@ include 'iog-common-product'
 include 'acanfora'
 
 include 'coltorti'
-include 'skuImp'
+include 'acanfora-stock'
 
 include 'openapi-ice'
 
