增加欧派国际项目

--- a/settings.gradle
+++ b/settings.gradle
@@ -21,7 +21,8 @@ include 'iog-common-product'
 include 'acanfora'
 
 include 'coltorti'
-include 'skuImp'
+include 'acanfora-stock'
 
 include 'openapi-ice'
+include 'oupaiguoji'
 
