--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -10,15 +10,28 @@ task copyToLib( type: Copy ) {
 dependencies {
     compile(
 
-
-            "commons-dbcp:commons-dbcp:1.4",
-            project(':project-common'),
-
-            project(':openapi-ice'),
-            project(':iog-common-product'),
-            project(':acanfora')
+            project(':openapi-ice')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 
 }
+
+jar {
+
+    dependsOn copyToLib
+
+
+    def manifestCp = configurations.compile.files.collect  {
+        File file = it
+        "lib/${file.name}"
+    }.join(' ')
+
+    manifest {
+        attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
+//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
+        attributes 'Class-Path': manifestCp
+    }
+}
+
+
