--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -9,6 +9,7 @@ task copyToLib( type: Copy ) {
 
 dependencies {
     compile(
+            project(':project-common'),
 
             project(':openapi-ice')
     )
