--- a/ebay/build.gradle
+++ b/ebay/build.gradle
@@ -6,9 +6,9 @@ dependencies {
 		"xalan:xalan:2.7.2",
 		"com.shangpin:ebay-shoping:1.0",
 		"com.shangpin:ebay-finding:1.0",
-		"com.shangpin:ebay-trading:1.0",
+		//"com.shangpin:ebay-trading:1.0",
 		"com.ebay.sdk:attributes:1.0",
-		"com.ebay.sdk:ebaycalls:1.0",
+		//"com.ebay.sdk:ebaycalls:1.0",
 		"com.ebay.sdk:helper:1.0",
 		"com.ebay.sdk:ebaysdkcore:1.0",
 		"org.apache.servicemix.bundles:org.apache.servicemix.bundles.oro:2.0.8_6",
