--- a/project-dao/build.gradle
+++ b/project-dao/build.gradle
@@ -22,7 +22,10 @@ dependencies {
             "com.fasterxml.jackson.core:jackson-databind:${fasterxml_jackson_version}",
             project(':project-framework'),
             "com.github.pagehelper:pagehelper:3.7.3",
-            "com.github.jsqlparser:jsqlparser:0.9.1"
+            "com.github.jsqlparser:jsqlparser:0.9.1",
+
+            "org.springframework.data:spring-data-mongodb:1.7.0.RELEASE",
+            "org.mongodb:mongo-java-driver:3.0.2",
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
