--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -31,7 +31,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': manifestCp
+        attributes 'Class-Path': '. ' +  manifestCp
     }
 }
 
