--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -38,7 +38,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': manifestCp
+        attributes 'Class-Path': '. ' +  manifestCp
     }
 }
 
