--- a/galiano/build.gradle
+++ b/galiano/build.gradle
@@ -37,6 +37,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.galiano.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': manifestCp
+        attributes 'Class-Path': '. ' + manifestCp
     }
 }
