修改日志级别

--- a/iog-web-container/src/main/resources/log4j.properties
+++ b/iog-web-container/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 # Categories and levels
 #######################################################################
 #Appender Configuration
-log4j.rootLogger=DEBUG, FileApp, ConApp
+log4j.rootLogger=ERROR, FileApp, ConApp
 
 log4j.logger.java.sql.Connection = ERROR  
 log4j.logger.java.sql.Statement = ERROR  
@@ -17,7 +17,7 @@ log4j.appender.logfile.encoding=UTF-8
 # Appenders
 #######################################################################
 # ConApp is set to be a ConsoleAppender.
-log4j.appender.ConApp.Threshold=DEBUG
+log4j.appender.ConApp.Threshold=ERROR
 log4j.appender.ConApp=org.apache.log4j.ConsoleAppender
 # ConApp uses PatternLayout.
 log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
@@ -37,4 +37,4 @@ log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,
 logging.level.org.springframework=info
 logging.level.org.hibernate=info
 
-log4j.logger.com.shangpin.iog=debug
+log4j.logger.com.shangpin.iog=ERROR
