--- a/spinnaker-stock/build.gradle
+++ b/spinnaker-stock/build.gradle
@@ -9,6 +9,7 @@ task copyToLib( type: Copy ) {
 
 dependencies {
     compile(
+            "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':openapi-ice')
     )
