--- a/iog-web-container/src/main/resources/log4j.properties
+++ b/iog-web-container/src/main/resources/log4j.properties
@@ -4,12 +4,10 @@
 # Categories and levels
 #######################################################################
 #Appender Configuration
-log4j.rootLogger=ERROR, FileApp, ConApp
+log4j.rootLogger=DEBUG, FileApp, ConApp
 
-log4j.logger.java.sql.Connection = ERROR  
-log4j.logger.java.sql.Statement = ERROR  
-log4j.logger.java.sql.PreparedStatement = ERROR, FileApp   
-log4j.logger.java.sql.ResultSet = ERROR 
+
+
 
 
 log4j.appender.logfile.encoding=UTF-8
@@ -17,14 +15,28 @@ log4j.appender.logfile.encoding=UTF-8
 # Appenders
 #######################################################################
 # ConApp is set to be a ConsoleAppender.
-log4j.appender.ConApp.Threshold=ERROR
+log4j.appender.ConApp.Threshold=DEBUG
 log4j.appender.ConApp=org.apache.log4j.ConsoleAppender
 # ConApp uses PatternLayout.
 log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
 # Define Pattern
 log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+
+log4j.logger.com.apache.ibatis=DEBUG
+log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=DEBUG
+log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=DEBUG
+log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+
+log4j.logger.java.sql.Connection = DEBUG
+log4j.logger.java.sql.Statement = DEBUG
+log4j.logger.java.sql.PreparedStatement = DEBUG
+log4j.logger.java.sql.ResultSet = DEBUG
+
+
+
+
 # FileApp
-log4j.appender.FileApp.Threshold=ERROR
+log4j.appender.FileApp.Threshold=DEBUG
 log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
 log4j.appender.FileApp.file=/usr/local/iog.log
 log4j.appender.FileApp.MaxFileSize=2000KB
@@ -34,7 +46,7 @@ log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
 
 #log4j.logger.org.jboss.cache=debug
-logging.level.org.springframework=info
-logging.level.org.hibernate=info
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
 
-log4j.logger.com.shangpin.iog=ERROR
+log4j.logger.com.shangpin.iog=DEBUG
