--- a/iog-web-container/src/main/resources/log4j.properties
+++ b/iog-web-container/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 # Categories and levels
 #######################################################################
 #Appender Configuration
-log4j.rootLogger=DEBUG, FileApp, ConApp
+log4j.rootLogger=INFO, FileApp, ConApp
 
 
 
@@ -15,28 +15,28 @@ log4j.appender.logfile.encoding=UTF-8
 # Appenders
 #######################################################################
 # ConApp is set to be a ConsoleAppender.
-log4j.appender.ConApp.Threshold=DEBUG
+log4j.appender.ConApp.Threshold=INFO
 log4j.appender.ConApp=org.apache.log4j.ConsoleAppender
 # ConApp uses PatternLayout.
 log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
 # Define Pattern
 log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 
-log4j.logger.com.apache.ibatis=DEBUG
-log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=DEBUG
-log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=DEBUG
-log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=DEBUG
+log4j.logger.com.apache.ibatis=ERROR
+log4j.logger.com.apache.ibatis.common.jdbc.SimpleDataSource=ERROR
+log4j.logger.com.apache.ibatis.common.jdbc.ScriptRunner=ERROR
+log4j.logger.com.apache.ibatis.sqlmap.engine.impl.SqlMapClientDelegate=ERROR
 
-log4j.logger.java.sql.Connection = DEBUG
-log4j.logger.java.sql.Statement = DEBUG
-log4j.logger.java.sql.PreparedStatement = DEBUG
-log4j.logger.java.sql.ResultSet = DEBUG
+log4j.logger.java.sql.Connection = ERROR
+log4j.logger.java.sql.Statement = ERROR
+log4j.logger.java.sql.PreparedStatement = ERROR
+log4j.logger.java.sql.ResultSet = ERROR
 
 
 
 
 # FileApp
-log4j.appender.FileApp.Threshold=DEBUG
+log4j.appender.FileApp.Threshold=ERROR
 log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
 log4j.appender.FileApp.file=/usr/local/iog.log
 log4j.appender.FileApp.MaxFileSize=2000KB
@@ -46,7 +46,7 @@ log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
 
 #log4j.logger.org.jboss.cache=debug
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=ERROR
+logging.level.org.hibernate=ERROR
 
-log4j.logger.com.shangpin.iog=DEBUG
+log4j.logger.com.shangpin.iog=ERROR
