--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -6,6 +6,12 @@ task copyToLib( type: Copy ) {
     from configurations.compile
 }
 
+task copyResources( type: Copy ) {
+    into "$buildDir/libs/conf"
+    from "$buildDir/resources/main"
+}
+
+
 
 dependencies {
     compile(
@@ -24,7 +30,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib ,   copyResources
+    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
@@ -38,7 +45,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. conf ' +  manifestCp
     }
 }
 
