修正重复更新错误

--- a/coltorti/src/main/resources/log4j.properties
+++ b/coltorti/src/main/resources/log4j.properties
@@ -29,7 +29,7 @@ log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
 log4j.appender.FileApp.file=coltorti-error.log
 log4j.appender.FileApp.MaxFileSize=2000KB
 log4j.appender.FileApp.MaxBackupIndex=1
-#log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
+log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
 log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout 
 log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
 
@@ -39,7 +39,7 @@ log4j.appender.FileWarn=org.apache.log4j.RollingFileAppender
 log4j.appender.FileWarn.file=coltorti-warn.log
 log4j.appender.FileWarn.MaxFileSize=2000KB
 log4j.appender.FileWarn.MaxBackupIndex=1
-#log4j.appender.FileWarn.DatePattern='.'yyyy-MM-dd 
+log4j.appender.FileWarn.DatePattern='.'yyyy-MM-dd 
 log4j.appender.FileWarn.layout=org.apache.log4j.PatternLayout 
 log4j.appender.FileWarn.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
 
