--- a/galiano/build.gradle
+++ b/galiano/build.gradle
@@ -5,6 +5,10 @@ task copyToLib( type: Copy ) {
     from configurations.compile
 }
 
+task copyResources( type: Copy ) {
+    into "$buildDir/libs/conf"
+    from "$buildDir/resources/main"
+}
 
 dependencies {
     compile(
@@ -23,7 +27,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
