--- a/acanfora-stock/build.gradle
+++ b/acanfora-stock/build.gradle
@@ -6,10 +6,6 @@ task copyToLib( type: Copy ) {
     from configurations.compile
 }
 
-task copyResources( type: Copy ) {
-    into "$buildDir/libs/conf"
-    from "$buildDir/resources/main"
-}
 
 
 dependencies {
@@ -25,7 +21,7 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib ,copyResources
+    dependsOn copyToLib
 
 
     def manifestCp = configurations.compile.files.collect  {
@@ -36,7 +32,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. conf  ' +  manifestCp
+        attributes 'Class-Path': '. ' +  manifestCp
     }
 }
 
