--- a/ebay/src/main/resources/store-brand.properties
+++ b/ebay/src/main/resources/store-brand.properties
@@ -11,19 +11,19 @@ VivienneWestwood=Marls-Fashion-for-Less`The-Couture-Auction-Co
 MaxMara=designerbrandsforless1
 JessicaSimpson=Worlds-Best-Deals`Already-Gorgeous`mlg-Best-Fashion-Store
 BBDakota=The-Girls-Got-Style`love-my-shooz
-JuicyCouture=spoiled*couture`oasisgoods`buytodaystrend`fitzcharming`sherryroom80`glo02`lotzzastuff`delilahsunshine010606`socher36
+JuicyCouture=spoiled*couture`oasisgoods`buytodaystrend`fitzcharming`sherryroom80`glo02`LOTZZASTUFF`delilahsunshine010606`socher36
 AlexanderWang=TaeJanaeBoutique`DVF-and-More`getdh
 Chloe=Malvinas-Luxuries`SWEET-GLAMOUR-STORE
-Abercombie&Fitch=FashionFest-Clothing`tikkys-closet
+Fitch=FashionFest-Clothing`tikkys-closet
 Gant=walkintofashion
 G-star=fashion-district`HOLLYWOOD-FASHION-4-ALL
 HugoBoss=Annies-Unique-Accessories`The-Trend-House-1`ModaNet2008
 Lacoste=authentic-shop2000`vkapparel`ModaNet2008
-Levis=lacanada91011`jklilthisandthat`azizamall
+Levis=lacanada91011`JK-lil-this-and-that`azizamall
 LEE=Galindas-Boutique`THE-GREAT-AMERICAN-JEAN-COMPANY
-Moncler=vipcouture`Top-Shelf-Apparel`TODDluxe
+Moncler=VIP_COUTURE`Top-Shelf-Apparel`TODDluxe
 PoloRalph=Galindas-Boutique`ander-trading
-RalphLauren=avalondistribution`Marina-Fashion-House`CHOGANCLOTHING`Awesome-Wear`nextlevelllc
+RalphLauren=Avalon-Distribution`Marina-Fashion-House`CHOGANCLOTHING`Awesome-Wear`nextlevelllc
 Supreme=crashstreetCOM`Clubhouse-562
 TommyHilfiger=Tommy-Hilfiger`lulujohn2007`DYK-Group-for-Hilfiger`maxmawi`boutique-one-eleven
 Zegna=CaitsClosetNYC`coleccioncouture
@@ -81,8 +81,6 @@ ASH=PremiumBrandOutlet`ShoeSmart2`shop-4-trends-now
 Birkenstock=trusole4u`cool-shoe`coolbrandoutlet
 Camper=moamoachuchu`baselinesports2460`liljsedie
 Clarks=tosh-and-lunas-couture`New-Edition-Fashion`crcollectionco4989`PARADISE-SHOES
-
-
 
 
 
