--- a/project-common/build.gradle
+++ b/project-common/build.gradle
@@ -4,8 +4,8 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile project(':project-framework')
     compile(
-            "commons-httpclient:commons-httpclient:3.1",
-            "org.apache.httpcomponents:httpclient:4.3.1",
+            //"commons-httpclient:commons-httpclient:3.1",
+            "org.apache.httpcomponents:httpclient:4.5",
             "net.sf.json-lib:json-lib:2.2:jdk15",
             "org.apache.poi:poi:3.0.1-FINAL",
             "redis.clients:jedis:${jedis_version}"
