--- a/ebay/src/main/resources/store-brand.properties
+++ b/ebay/src/main/resources/store-brand.properties
@@ -26,9 +26,9 @@ PoloRalph=Galindas-Boutique`ander-trading
 RalphLauren=Avalon-Distribution`Marina-Fashion-House`CHOGANCLOTHING`Awesome-Wear`nextlevelllc
 Supreme=crashstreetCOM`Clubhouse-562
 TommyHilfiger=Tommy-Hilfiger`lulujohn2007`DYK-Group-for-Hilfiger`maxmawi`boutique-one-eleven
-Zegna=CaitsClosetNYC`coleccioncouture
+Zegna=CaitsClosetNYC`Coleccion-Couture
 EmporioArmani=Traderout`VIP-COUTURE`RedTagCentral
-Bueberry=agconline`Finest-Apparel`rosentalka
+burberry=agconline`Finest-Apparel`rosentalka
 CKUNDERWARE=Webzom`Jakes-Designer-Duds`pasarelafashions
 Jockey=Jockey-Direct-Closeouts`Central-Florida-Bargain-Sales`CJs-Wholesale
 Victoria'sSecret=Victorias-Outlet`Victorias-Pink-Fashion`denimdebbie
