--- a/acanfora/src/main/resources/log4j.properties
+++ b/acanfora/src/main/resources/log4j.properties
@@ -53,10 +53,10 @@ log4j.logger.mongodb=DEBUG, MongoDB
 #org.log4mongo.MongoDbAppender
 log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
 #mongodb库名
-log4j.appender.MongoDB.databaseName=supply-job
+log4j.appender.MongoDB.databaseName=iog
 #mongodb表名
-log4j.appender.MongoDB.collectionName=iog
-log4j.appender.MongoDB.hostname=192.168.20.82
+log4j.appender.MongoDB.collectionName=operatelog
+log4j.appender.MongoDB.hostname=192.168.20.112
 log4j.appender.MongoDB.port=27017
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.mongodb=false
