--- a/galiano/build.gradle
+++ b/galiano/build.gradle
@@ -10,6 +10,8 @@ task copyResources( type: Copy ) {
     from "$buildDir/resources/main"
 }
 
+def propertyPath =    "$buildDir/libs/conf"
+
 dependencies {
     compile(
             "org.mybatis:mybatis:3.2.2",
@@ -35,14 +37,21 @@ jar {
 //    }
 
     def manifestCp = configurations.compile.files.collect  {
+
         File file = it
         "lib/${file.name}"
     }.join(' ')
 
+    def mainfestPropertyCp = new File(propertyPath).listFiles().collect {
+        File file = it
+        println it.name
+        "conf/${file.name}"
+    }.join(' ')
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.galiano.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' + manifestCp + new File("$buildDir/libs/conf").list().collect { "conf/$it" }.join(' ')
+
+        attributes 'Class-Path': '. ' + manifestCp +  ' ' + mainfestPropertyCp
     }
 }
