--- a/ebay/src/main/resources/store-brand-sports.properties
+++ b/ebay/src/main/resources/store-brand-sports.properties
@@ -2,15 +2,16 @@ ASICS=The Run Store`Tropic Sport`
 Brooks=allamerican2100`Tropic Sport`BK_String_Theory357
 Champion=Forza-Sports`MMAWarehouse-Global`Sports-Authority
 CW-X=Scottsdale Home Goods`Respro Medical`Globex Shops
-Everlast=Animo Boxing`SONNY252525 FAMILY VALUES STORE
+Everlast=Animo Boxing`MY SONNY252525 FAMILY VALUES STORE
 Extreme\ Pak=American General Superstore`wholesaledealstore`Odd Mod and More Store
 Garmin=Heart Rate Monitors USA`WilloughbysCamera`CampingSurvivals
 Jordan=id4soles`Athletic-Shoe-Source-and-More
-Lululemon=baybadabaybada
+#---个人卖家 Lululemon=baybada
 Mizuno=runningdervish`Toys4World`Shoe-Plaza`DeelZone
 New\ Balance=Tropic Sport`The Run Store`Clubs and Sticks
 Nike=Clubs and Sticks`Fit-Just-Right`Discontinued Shoes`id4soles
-Oyea=mojo-cycles`7411frankh
+Oyea=mojo-cycles
+#---个人卖家`7411frankh
 Reebok=coachdcartersports`NutritionWizards`dockersandnike
 Saucony=The Run Store`Sole Sports Running Zone`Enduro-Sport
 SPY=Action-Sport-Optics`FittedFresh
