--- a/ebay/build.gradle
+++ b/ebay/build.gradle
@@ -19,4 +19,22 @@ dependencies {
 		"com.google.code.gson:gson:2.3.1",
 		)
 }
+task copyToLib( type: Copy ) {
+	into "$buildDir/libs/lib"
+	from configurations.compile
+}
 
+jar {
+
+	dependsOn copyToLib
+
+	def manifestCp = configurations.compile.files.collect  {
+		File file = it
+		"lib/${file.name}"
+	}.join(' ')
+
+	manifest {
+		attributes 'Main-Class': 'com.shangpin.iog.ebay.EbayStartUp'
+		attributes 'Class-Path': '. '+ manifestCp
+	}
+}
