--- a/ebay/src/main/resources/store-brand-sports.properties
+++ b/ebay/src/main/resources/store-brand-sports.properties
@@ -3,13 +3,12 @@ Brooks=allamerican2100`Tropic Sport`BK_String_Theory357
 Champion=Forza-Sports`MMAWarehouse-Global`Sports-Authority
 CW-X=Scottsdale Home Goods`Respro Medical`Globex Shops
 Everlast=Animo Boxing`MY SONNY252525 FAMILY VALUES STORE
-Extreme\ Pak=American General Superstore`wholesaledealstore`Odd Mod and More Store
+Extreme\ Pak=American General Superstore`wholesaledealstore
 Garmin=Heart Rate Monitors USA`WilloughbysCamera`CampingSurvivals
 Jordan=id4soles`Athletic-Shoe-Source-and-More
 Mizuno=runningdervish`Toys4World`Shoe-Plaza`DeelZone
 New\ Balance=Tropic Sport`The Run Store`Clubs and Sticks
 Nike=Clubs and Sticks`Fit-Just-Right`Discontinued Shoes`id4soles
-Oyea=mojo-cycles
 Reebok=coachdcartersports`NutritionWizards`dockersandnike
 Saucony=The Run Store`Sole Sports Running Zone`Enduro-Sport
 SPY=Action-Sport-Optics`FittedFresh
@@ -18,3 +17,5 @@ Timberland=ModaNet2008`themost_spark`cool-shoe
 under\ armour=eCop Police Supply`Under Armour
 #---个人卖家 Lululemon=baybada
 #---个人卖家`7411frankh
+#Extreme\ Pak=Odd Mod and More Store
+#Oyea=mojo-cycles
