--- a/ebay/src/main/resources/log4j.properties
+++ b/ebay/src/main/resources/log4j.properties
@@ -25,21 +25,21 @@ log4j.appender.ConApp.layout=org.apache.log4j.PatternLayout
 log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 # FileApp
 log4j.appender.FileApp.Threshold=ERROR
-log4j.appender.FileApp=org.apache.log4j.RollingFileAppender
+log4j.appender.FileApp=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.FileApp.file=ebay-error.log
-log4j.appender.FileApp.MaxFileSize=2000KB
-log4j.appender.FileApp.MaxBackupIndex=1
-#log4j.appender.FileApp.DatePattern='.'yyyy-MM-dd 
+#log4j.appender.FileApp.MaxFileSize=2000KB
+#log4j.appender.FileApp.MaxBackupIndex=1
+log4j.appender.FileApp.datePattern='.'yyyy-MM-dd
 log4j.appender.FileApp.layout=org.apache.log4j.PatternLayout 
 log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n
 
 log4j.logger.FileWarn=warn
 log4j.appender.FileWarn.Threshold=WARN
-log4j.appender.FileWarn=org.apache.log4j.RollingFileAppender
+log4j.appender.FileWarn=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.FileWarn.file=ebay-warn.log
-log4j.appender.FileWarn.MaxFileSize=2000KB
-log4j.appender.FileWarn.MaxBackupIndex=1
-#log4j.appender.FileWarn.DatePattern='.'yyyy-MM-dd 
+#log4j.appender.FileWarn.MaxFileSize=2000KB
+#log4j.appender.FileWarn.MaxBackupIndex=1
+log4j.appender.FileWarn.datePattern='.'yyyy-MM-dd
 log4j.appender.FileWarn.layout=org.apache.log4j.PatternLayout 
 log4j.appender.FileWarn.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,SSS} method\:%l%n%m%n 
 
