--- a/ebay/src/main/resources/store-brand-sports.properties
+++ b/ebay/src/main/resources/store-brand-sports.properties
@@ -1,4 +1,4 @@
-ASICS=The Run Store`Tropic Sport`
+ASICS=The Run Store`Tropic Sport
 Brooks=allamerican2100`Tropic Sport`BK_String_Theory357
 Champion=Forza-Sports`MMAWarehouse-Global`Sports-Authority
 CW-X=Scottsdale Home Goods`Respro Medical`Globex Shops
@@ -14,8 +14,9 @@ Saucony=The Run Store`Sole Sports Running Zone`Enduro-Sport
 SPY=Action-Sport-Optics`FittedFresh
 The\ North\ Face=NorthFaceOfSwarovski`bestoutlets248`Mr bass fishing lures
 Timberland=ModaNet2008`themost_spark`cool-shoe
-under\ armour=eCop Police Supply`Under Armour
+under\ armour=Under Armour`eCop Police Supply
 #---个人卖家 Lululemon=baybada
 #---个人卖家`7411frankh
 #Extreme\ Pak=Odd Mod and More Store
 #Oyea=mojo-cycles
+#Under Armour这个数据量太多，7800个spu，每次只能20个，需要1：30小时才能取玩，
