测试部分代码

--- a/ebay/src/main/resources/store-brand.properties
+++ b/ebay/src/main/resources/store-brand.properties
@@ -32,6 +32,8 @@ burberry=agconline`Finest-Apparel`rosentalka
 CKUNDERWARE=Webzom`Jakes-Designer-Duds`pasarelafashions
 Jockey=Jockey-Direct-Closeouts`Central-Florida-Bargain-Sales`CJs-Wholesale
 Victoria'sSecret=Victorias-Outlet`Victorias-Pink-Fashion`denimdebbie
+
+
 DNKY=Design-Her-Boutique`Annies-Unique-Accessories`HannibalMed
 Fossil=Dream-a-Beautiful-Life`Carolinas-Closets`SDealfinder`Ship-Anywhere-Around-The-World
 Guess=Susie-First-Store`ahilles14
@@ -68,18 +70,22 @@ Carat*London=Wayfair`Door-Buster-Jewelry
 Pandora=Elegant-Charms-and-Jewelry`BRANDS-BE-GONE-LLC`1ofakynd`authenticglasses
 Swasrovski=ralfords
 Tiffany=LICENSE2DIVA`secretboutique-llc`925restored
+
+
+
 ThomasSabo=zabelbeauty
-Juicy=CharmCrazey-Vintage-Jewelry-Charms`ROOM-80`glo02`LOTZZASTUFF`delilah-greatbrands`KARENS-CHIC-OH-SO-MANY-GREAT-DEALS
-Pilgrim=Tragic-Mountain`slpallotti2012
-Charriol=Sigmatime`Jomashop`1ST-CLASS-CHIC
-Tissot=ralfords
-Citizen=ralfords
+Juicy=CharmCrazey Vintage Jewelry Charms`ROOM 80`glo02`LOTZZASTUFF`delilah-greatbrands`KAREN&#39;S CHIC-OH SO MANY GREAT DEALS
+Pilgrim=Tragic Mountain`slpallotti2012
+Charriol=Sigmatime`Jomashop`1ST CLASS CHIC
+Tissot=Ralfords
+Citizen=Ralfords
 Rayban=asavings`authenticglasses
 Aldo=VFTW
 MarcbyMarcJobs=The-Shopping-Hub
 ASH=PremiumBrandOutlet`ShoeSmart2`shop-4-trends-now
 Birkenstock=trusole4u`cool-shoe`coolbrandoutlet
-Camper=moamoachuchu`baselinesports2460`liljsedie
+Camper=liljsedie
+//Camper=moamoachuchu 个人的商店
 Clarks=tosh-and-lunas-couture`New-Edition-Fashion`crcollectionco4989`PARADISE-SHOES
 
 
