--- a/vela/build.gradle
+++ b/vela/build.gradle
@@ -19,6 +19,7 @@ dependencies {
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product')
@@ -42,7 +43,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.vela.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. conf ' +  manifestCp
     }
