更新store-brand配置文件

--- a/ebay/src/main/resources/store-brand.properties
+++ b/ebay/src/main/resources/store-brand.properties
@@ -1,25 +1,28 @@
-AmericanApparel=sarasbargainshopping`fittedfresh
-Forever21=asm080
-MOSCHINO=stagemom88`The-Trend-House-1`ajmfashions
-GAP=jdeal625`Vanessa-Lus-Shop
+AmericanApparel=Sara&#39;s Bargain Shopping`fittedfresh
+//Forever21=asm080 个人的商店，MOSCHINO=stagemom88 个人的商店
+MOSCHINO=The-Trend-House-1`ajmfashions
+//GAP=Vanessa-Lus-Shop不存在
+GAP=jdeal625
 FREEPEOPLE=Designer-Warehouse-Route44
-LAUNDRYBYSHELLISEGAL=RECYCLE-YOUR-FASHIONS`eTRADIS`Gabrielles-Easy-Street
-CK=mlg-Best-Fashion-Store`love.and.gratitude.boutique`jd.foundfashion`jj-hot-deals`elitova`BLUE-JEANS-BAZAAR`BB-Boutique-Bags-n-Belts`Sigmatime`AshfordWatches`brands-palace
+LAUNDRYBYSHELLISEGAL=RECYCLE-YOUR-FASHIONS`eTRADIS`Gabrielle&#39;s Easy Street
+//Ck=love.and.gratitude.boutique个人的商店
+CK=mlg-Best-Fashion-Store`jd.foundfashion`jj-hot-deals`elitova`BLUE-JEANS-BAZAAR`BB-Boutique-Bags-n-Belts`Sigmatime`AshfordWatches`brands-palace
 PaulFrank=shopitfashion
 TedBaker=Fantastik-Fashion`madd-dealz
-VivienneWestwood=Marls-Fashion-for-Less`The-Couture-Auction-Co
+VivienneWestwood=Marl&#39;s Fashion for Less`The-Couture-Auction-Co
 MaxMara=designerbrandsforless1
 JessicaSimpson=Worlds-Best-Deals`Already-Gorgeous`mlg-Best-Fashion-Store
-BBDakota=The-Girls-Got-Style`love-my-shooz
-JuicyCouture=spoiled*couture`oasisgoods`buytodaystrend`fitzcharming`sherryroom80`glo02`LOTZZASTUFF`delilahsunshine010606`socher36
+BBDakota=The Girl&#39;s Got Style`love-my-shooz
+//JuicyCouture=spoiled*couture 个人的商店
+JuicyCouture=Oasis Goods`buytodaystrend
 AlexanderWang=TaeJanaeBoutique`DVF-and-More`getdh
-Chloe=Malvinas-Luxuries`SWEET-GLAMOUR-STORE
+Chloe=Malvina&#39;s Luxuries`SWEET-GLAMOUR-STORE
 Fitch=FashionFest-Clothing`tikkys-closet
 Gant=walkintofashion
 G-star=fashion-district`HOLLYWOOD-FASHION-4-ALL
-HugoBoss=Annies-Unique-Accessories`The-Trend-House-1`ModaNet2008
+HugoBoss=Annie&#39;s Unique Accessories`The-Trend-House-1`ModaNet2008
 Lacoste=authentic-shop2000`vkapparel`ModaNet2008
-Levis=lacanada91011`JK-lil-this-and-that`azizamall
+Levis=lacanada91011`JK-lil-this-and-that`Aziza Mall
 LEE=Galindas-Boutique`THE-GREAT-AMERICAN-JEAN-COMPANY
 Moncler=VIP_COUTURE`Top-Shelf-Apparel`TODDluxe
 PoloRalph=Galindas-Boutique`ander-trading
@@ -32,30 +35,31 @@ burberry=agconline`Finest-Apparel`rosentalka
 CKUNDERWARE=Webzom`Jakes-Designer-Duds`pasarelafashions
 Jockey=Jockey-Direct-Closeouts`Central-Florida-Bargain-Sales`CJs-Wholesale
 Victoria'sSecret=Victorias-Outlet`Victorias-Pink-Fashion`denimdebbie
-
-
-DNKY=Design-Her-Boutique`Annies-Unique-Accessories`HannibalMed
+DNKY=Design-Her-Boutique`Annie&#39;s Unique Accessories`HannibalMed
 Fossil=Dream-a-Beautiful-Life`Carolinas-Closets`SDealfinder`Ship-Anywhere-Around-The-World
 Guess=Susie-First-Store`ahilles14
-KateSpade=PapasoPapanasos-Treasure-Trove`What-A-Mom-Needs
+KateSpade=PapasoPapanaso&#39;s Treasure Trove`What-A-Mom-Needs
 Kipling=brands-palace`Love-Great-Deal`Vshop4U
 Lesportsac=greatdealsandfinds`Marina-Fashion-House
-MarcbyMarcJacob=TrendsOnStage`EASYHOOK`Authentic-Designs-Boutique`The-Purse-Picker`bluefire448`lucky121899
+//MarcbyMarcJacob=bluefire448`lucky121899 个人的商店
+MarcbyMarcJacob=TrendsOnStage`EASYHOOK`Authentic-Designs-Boutique`The-Purse-Picker
 MK=leperfect`Love-Great-Deal`M-D-Online-Purse-Outlet`authenticglasses
-MCM=Tikas-Coach-Collection`Authentic-Designs-Boutique`desertdealsandsteals
-ColeHann=Love-Great-Deal`beautifulbaroque`shackofalltrades
-Patricia=verabradley`finethreadping`Beautiful-Baroque
-RebeccaMinkoff=The-Shopping-Hub`Tikas-Coach-Collection`Love-Great-Deal
+MCM=Tika&#39;s Coach Collection`Authentic-Designs-Boutique`desertdealsandsteals
+//ColeHann=shackofalltrades 个人商店
+ColeHann=Love-Great-Deal`Beautiful Baroque
+Patricia=verabradley`finethreadping`Beautiful Baroque
+RebeccaMinkoff=The-Shopping-Hub`Tika&#39;s Coach Collection`Love-Great-Deal
 ToryBurch=Authentic-Designs-Boutique`Love-Great-Deal`EASYHOOK`Make-Fashion-Matters`VitalExtras
-Gucci=Annies-Unique-Accessories`Malvinas-Luxuries`hottercooler`huslux`DESIGNERS-BASEMENT`Pretty-Vintage-Jewels`luxus-and-invoco`authenticglasses`go-luxury
+Gucci=Annie&#39;s Unique Accessories`Malvina&#39;s Luxuries`hottercooler`huslux`DESIGNER&#39;S BASEMENT`Pretty-Vintage-Jewels`luxus-and-invoco`authenticglasses`Go-Luxury
 Prada=Awesome-Resale-Couture-Specialties`vipumpkin`MODA-MIGNON`authenticglasses
-Coach=Top-Brand-Handbag-Store`AUXIN-DESIGNER-COLLECTION`designerbrandsforless1`fromRondei`Lilysheepy`Design-Her-Boutique`LUXUS-and-INVOCO`asavings`authenticglasses
+//Coach=Top-Brand-Handbag-Store店铺不存在
+Coach=AUXIN-DESIGNER-COLLECTION`designerbrandsforless1`fromRondei`Lilysheepy`Design-Her-Boutique`LUXUS-and-INVOCO`asavings`authenticglasses
 Celine=Passion4Fashion4Less`personalshoppers
-Fendi=Christening-More`DVF-and-More`Tikas-Coach-Collection
+Fendi=Christening-More`DVF-and-More`Tika&#39;s Coach Collection
 Furla=vipumpkin`MonarcoMonarco`Trendy-Deals-For-U
 Dior=fififabulous`CaitsClosetNYC
 Montblanc=WatchWarehouse`Premier-Watch-Shop`leperfect
-Jessica=Designer-Shoe-Deals`PremiumBrandOutlet`shenzhenbay
+Jessica=Designer-Shoe-Deals`PremiumBrandOutlet`Shenzhen-Bay
 UGG=Shop-Smart-500`trusole4u`Shoes-Special
 Timberland=SMT-Footwear`ModaNet2008`FreshKicksInt`Art-of-Deals
 Palladium=Official-Backcountry-Store`HasHotStyles`cool-shoe
@@ -63,16 +67,13 @@ K-swiss=Homie-Gear`2000bestdeals`stfam1
 HushPuppies=PARADISE-SHOES`PremiumBrandOutlet
 Haviannas=Omni-Beach`JunkieDog`Kimboze-Boutique
 Geox=New-Day-New-Season-Shoe-Store`Shoes-Forever-Inc
-ECCO=Djs-Boardshop
+ECCO=Dj&#39;s Boardshop
 Nocona=TXTREASURESUNLTD`AFFORDABLE-WESTERN-STORE
 MarcoValentino=KAS-FASHION
 Carat*London=Wayfair`Door-Buster-Jewelry
 Pandora=Elegant-Charms-and-Jewelry`BRANDS-BE-GONE-LLC`1ofakynd`authenticglasses
 Swasrovski=ralfords
 Tiffany=LICENSE2DIVA`secretboutique-llc`925restored
-
-
-
 ThomasSabo=zabelbeauty
 Juicy=CharmCrazey Vintage Jewelry Charms`ROOM 80`glo02`LOTZZASTUFF`delilah-greatbrands`KAREN&#39;S CHIC-OH SO MANY GREAT DEALS
 Pilgrim=Tragic Mountain`slpallotti2012
