--- a/vela/build.gradle
+++ b/vela/build.gradle
@@ -43,7 +43,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.vela.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.vela.StartSkuJob'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. conf ' +  manifestCp
     }
