--- a/brunarosso/build.gradle
+++ b/brunarosso/build.gradle
@@ -11,6 +11,7 @@ dependencies {
             "redis.clients:jedis:${jedis_version}",
             "com.thoughtworks.xstream:xstream:1.4.7",
             "commons-net:commons-net:1.4.1",
+            "org.jdom:jdom:2.0.2",
             project(':project-framework'),
             project(':project-common'),
             project(':iog-service'),
