--- a/ebay/src/main/resources/store-brand.properties
+++ b/ebay/src/main/resources/store-brand.properties
@@ -1,11 +1,11 @@
 AmericanApparel=Sara&#39;s Bargain Shopping`fittedfresh
-//Forever21=asm080 个人的商店，MOSCHINO=stagemom88 个人的商店
+#Forever21=asm080 个人的商店，MOSCHINO=stagemom88 个人的商店
 MOSCHINO=The-Trend-House-1`ajmfashions
-//GAP=Vanessa-Lus-Shop不存在
+#GAP=Vanessa-Lus-Shop不存在
 GAP=jdeal625
 FREEPEOPLE=Designer-Warehouse-Route44
 LAUNDRYBYSHELLISEGAL=RECYCLE-YOUR-FASHIONS`eTRADIS`Gabrielle&#39;s Easy Street
-//Ck=love.and.gratitude.boutique个人的商店
+#Ck=love.and.gratitude.boutique个人的商店
 CK=mlg-Best-Fashion-Store`jd.foundfashion`jj-hot-deals`elitova`BLUE-JEANS-BAZAAR`BB-Boutique-Bags-n-Belts`Sigmatime`AshfordWatches`brands-palace
 PaulFrank=shopitfashion
 TedBaker=Fantastik-Fashion`madd-dealz
@@ -13,7 +13,7 @@ VivienneWestwood=Marl&#39;s Fashion for Less`The-Couture-Auction-Co
 MaxMara=designerbrandsforless1
 JessicaSimpson=Worlds-Best-Deals`Already-Gorgeous`mlg-Best-Fashion-Store
 BBDakota=The Girl&#39;s Got Style`love-my-shooz
-//JuicyCouture=spoiled*couture 个人的商店
+#JuicyCouture=spoiled*couture 个人的商店
 JuicyCouture=Oasis Goods`buytodaystrend
 AlexanderWang=TaeJanaeBoutique`DVF-and-More`getdh
 Chloe=Malvina&#39;s Luxuries`SWEET-GLAMOUR-STORE
@@ -41,18 +41,18 @@ Guess=Susie-First-Store`ahilles14
 KateSpade=PapasoPapanaso&#39;s Treasure Trove`What-A-Mom-Needs
 Kipling=brands-palace`Love-Great-Deal`Vshop4U
 Lesportsac=greatdealsandfinds`Marina-Fashion-House
-//MarcbyMarcJacob=bluefire448`lucky121899 个人的商店
+#MarcbyMarcJacob=bluefire448`lucky121899 个人的商店
 MarcbyMarcJacob=TrendsOnStage`EASYHOOK`Authentic-Designs-Boutique`The-Purse-Picker
 MK=leperfect`Love-Great-Deal`M-D-Online-Purse-Outlet`authenticglasses
 MCM=Tika&#39;s Coach Collection`Authentic-Designs-Boutique`desertdealsandsteals
-//ColeHann=shackofalltrades 个人商店
+#ColeHann=shackofalltrades 个人商店
 ColeHann=Love-Great-Deal`Beautiful Baroque
 Patricia=verabradley`finethreadping`Beautiful Baroque
 RebeccaMinkoff=The-Shopping-Hub`Tika&#39;s Coach Collection`Love-Great-Deal
 ToryBurch=Authentic-Designs-Boutique`Love-Great-Deal`EASYHOOK`Make-Fashion-Matters`VitalExtras
 Gucci=Annie&#39;s Unique Accessories`Malvina&#39;s Luxuries`hottercooler`huslux`DESIGNER&#39;S BASEMENT`Pretty-Vintage-Jewels`luxus-and-invoco`authenticglasses`Go-Luxury
 Prada=Awesome-Resale-Couture-Specialties`vipumpkin`MODA-MIGNON`authenticglasses
-//Coach=Top-Brand-Handbag-Store店铺不存在
+#Coach=Top-Brand-Handbag-Store店铺不存在
 Coach=AUXIN-DESIGNER-COLLECTION`designerbrandsforless1`fromRondei`Lilysheepy`Design-Her-Boutique`LUXUS-and-INVOCO`asavings`authenticglasses
 Celine=Passion4Fashion4Less`personalshoppers
 Fendi=Christening-More`DVF-and-More`Tika&#39;s Coach Collection
@@ -86,7 +86,7 @@ MarcbyMarcJobs=The-Shopping-Hub
 ASH=PremiumBrandOutlet`ShoeSmart2`shop-4-trends-now
 Birkenstock=trusole4u`cool-shoe`coolbrandoutlet
 Camper=liljsedie
-//Camper=moamoachuchu 个人的商店
+#Camper=moamoachuchu 个人的商店
 Clarks=tosh-and-lunas-couture`New-Edition-Fashion`crcollectionco4989`PARADISE-SHOES
 
 
