增加ftp 功能 现针对brunarosso

--- a/coltorti/src/main/resources/log4j.properties
+++ b/coltorti/src/main/resources/log4j.properties
@@ -26,7 +26,7 @@ log4j.appender.ConApp.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 # FileApp
 log4j.appender.FileApp.Threshold=ERROR
 log4j.appender.FileApp=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FileApp.file=coltorti-error.log
+log4j.appender.FileApp.file=log/coltorti-error.log
 #log4j.appender.FileApp.MaxFileSize=2000KB
 #log4j.appender.FileApp.MaxBackupIndex=1
 log4j.appender.FileApp.datePattern='.'yyyy-MM-dd
@@ -36,7 +36,7 @@ log4j.appender.FileApp.layout.ConversionPattern=[%-5p] %d{yyyy-MM-dd HH\:mm\:ss,
 log4j.logger.FileWarn=warn
 log4j.appender.FileWarn.Threshold=WARN
 log4j.appender.FileWarn=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.FileWarn.file=coltorti-warn.log
+log4j.appender.FileWarn.file=log/coltorti-warn.log
 #log4j.appender.FileWarn.MaxFileSize=2000KB
 #log4j.appender.FileWarn.MaxBackupIndex=1
 log4j.appender.FileWarn.datePattern='.'yyyy-MM-dd
