--- a/project-common/build.gradle
+++ b/project-common/build.gradle
@@ -8,6 +8,7 @@ dependencies {
             "org.apache.httpcomponents:httpclient:4.5",
             "net.sf.json-lib:json-lib:2.2:jdk15",
             "org.apache.poi:poi:3.0.1-FINAL",
+            "com.enterprisedt:edtftp:1.0",
             "redis.clients:jedis:${jedis_version}"
     )
 
