--- a/vela/src/main/resources/log4j.properties
+++ b/vela/src/main/resources/log4j.properties
@@ -49,7 +49,7 @@ log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-
 log4j.additivity.error=false
 
 #log4j for mongodb
-log4j.logger.mongodb=DEBUG, MongoDB
+log4j.logger.mongodb=INFO, MongoDB
 #org.log4mongo.MongoDbAppender
 log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
 #mongodb库名
