--- a/acanfora-stock/src/main/resources/log4j.properties
+++ b/acanfora-stock/src/main/resources/log4j.properties
@@ -48,15 +48,15 @@ log4j.appender.error.layout.ConversionPattern=\r\n--------Start----------\r\n[%-
 #自定义日志不输入到log4j.rootLogger模式
 log4j.additivity.error=false
 
-##log4j for mongodb
-#log4j.logger.mongodb=DEBUG, MongoDB
-##org.log4mongo.MongoDbAppender
-#log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
-##mongodb库名
-#log4j.appender.MongoDB.databaseName=supply-job
-##mongodb表名
-#log4j.appender.MongoDB.collectionName=iog
-#log4j.appender.MongoDB.hostname=192.168.20.82
-#log4j.appender.MongoDB.port=27017
-##自定义日志不输入到log4j.rootLogger模式
-#log4j.additivity.mongodb=false
+#log4j for mongodb
+log4j.logger.mongodb=DEBUG, MongoDB
+#org.log4mongo.MongoDbAppender
+log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
+#mongodb库名
+log4j.appender.MongoDB.databaseName=iog
+#mongodb表名
+log4j.appender.MongoDB.collectionName=operate_log
+log4j.appender.MongoDB.hostname=@db.MongoDB.hostname@
+log4j.appender.MongoDB.port=27017
+#自定义日志不输入到log4j.rootLogger模式
+log4j.additivity.mongodb=false
