--- a/build.gradle
+++ b/build.gradle
@@ -94,6 +94,14 @@ subprojects {
         mavenCentral()
     }
 
+    processResources {
+        from(sourceSets.main.resources.srcDirs) {
+            filter(org.apache.tools.ant.filters.ReplaceTokens,
+                    tokens: loadGroovy()
+            )
+        }
+    }
+
 
 }
 
