--- a/ebay/src/main/resources/log4j.properties
+++ b/ebay/src/main/resources/log4j.properties
@@ -48,3 +48,17 @@ logging.level.org.springframework=info
 logging.level.org.hibernate=info
 
 log4j.logger.com.shangpin.iog=debug
+
+
+#log4j for mongodb
+log4j.logger.mongodb=INFO, MongoDB
+#org.log4mongo.MongoDbAppender
+log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
+#mongodb库名
+log4j.appender.MongoDB.databaseName=iog
+#mongodb表名
+log4j.appender.MongoDB.collectionName=operate_log
+log4j.appender.MongoDB.hostname=@MongoDB.hostname@
+log4j.appender.MongoDB.port=27017
+#自定义日志不输入到log4j.rootLogger模式
+log4j.additivity.mongodb=false
