--- a/spinnaker-stock/build.gradle
+++ b/spinnaker-stock/build.gradle
@@ -29,7 +29,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.GrabStockImp'
+        attributes 'Main-Class': 'com.shangpin.iog.acanfora.stock.SpinnakerStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ' +  manifestCp
     }
