--- a/ebay/src/main/resources/log4j.properties
+++ b/ebay/src/main/resources/log4j.properties
@@ -54,11 +54,11 @@ log4j.logger.com.shangpin.iog=debug
 log4j.logger.mongodb=INFO, MongoDB
 #org.log4mongo.MongoDbAppender
 log4j.appender.MongoDB=com.shangpin.iog.common.utils.log.mongodb.MyMongoDbAppender
-#mongodb库名
+#mongodb锟斤拷锟斤拷
 log4j.appender.MongoDB.databaseName=iog
-#mongodb表名
+#mongodb锟斤拷锟斤拷
 log4j.appender.MongoDB.collectionName=operate_log
-log4j.appender.MongoDB.hostname=@MongoDB.hostname@
+log4j.appender.MongoDB.hostname=@db.MongoDB.hostname@
 log4j.appender.MongoDB.port=27017
-#自定义日志不输入到log4j.rootLogger模式
+#锟皆讹拷锟斤拷锟斤拷志锟斤拷锟斤拷锟诫到log4j.rootLogger模式
 log4j.additivity.mongodb=false
