--- a/brunarosso-stock/build.gradle
+++ b/brunarosso-stock/build.gradle
@@ -12,14 +12,13 @@ dependencies {
             "com.thoughtworks.xstream:xstream:1.4.7",
             "commons-net:commons-net:1.4.1",
             "dom4j:dom4j:1.6.1",
+            "org.jdom:jdom:2.0.2",
             "org.apache.cxf:cxf-rt-frontend-jaxws:3.0.1",
             project(':project-framework'),
             project(':project-common'),
             project(':iog-service'),
-            project(':project-dao'),
             project(':iog-common-product'),
-            project(':openapi-ice'),
-            project(':brunarosso')
+            project(':openapi-ice')
             /*project(':iog-web-container')*/
     )
 
