--- a/project-common/build.gradle
+++ b/project-common/build.gradle
@@ -2,7 +2,7 @@
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    compile (project(':project-framework'), project(':brunarosso'))
+    compile (project(':project-framework'))
     compile(
             "commons-httpclient:commons-httpclient:3.1",
             "org.apache.httpcomponents:httpclient:4.5",
