--- a/brunarosso/src/main/resources/param.properties
+++ b/brunarosso/src/main/resources/param.properties
@@ -1,1 +1,5 @@
 path=E:/brunarosso/
+latestProPath=E:/latestProXml.txt
+latestStockPath=E:/latestXml.txt
+localFilePath = E:/brunarosso
+testFilePath=E:/TestFtpDowload
