--- a/brunarosso/src/main/resources/param.properties
+++ b/brunarosso/src/main/resources/param.properties
@@ -1,5 +1,5 @@
 path=E:/brunarosso/
 latestProPath=E:/latestProXml.txt
 latestStockPath=E:/latestXml.txt
-localFilePath = E:/brunarosso/
+localFilePath = E:/stockDownload/
 testFilePath=E:/TestFtpDowload/
