--- a/brunarosso-stock/src/main/resources/param.properties
+++ b/brunarosso-stock/src/main/resources/param.properties
@@ -1,2 +1,2 @@
-localFilePath = /home/dev/job/brunarosso
-path=E:/brunarosso/
+localFilePath = /home/dev/job/brunarosso/file
+path=/home/dev/job/brunarosso/file
