--- a/brunarosso-stock/build.gradle
+++ b/brunarosso-stock/build.gradle
@@ -2,8 +2,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
     compile(
-            "commons-httpclient:commons-httpclient:3.1",
-            "org.apache.httpcomponents:httpclient:4.1.1",
+
             "net.sf.json-lib:json-lib:2.2:jdk15",
             "org.apache.poi:poi:3.0.1-FINAL",
             "com.google.code.gson:gson:2.2.2",
@@ -14,10 +13,8 @@ dependencies {
             "dom4j:dom4j:1.6.1",
             "org.jdom:jdom:2.0.2",
             "org.apache.cxf:cxf-rt-frontend-jaxws:3.0.1",
-            project(':project-framework'),
             project(':project-common'),
-            project(':iog-service'),
-            project(':iog-common-product'),
+
             project(':openapi-ice')
             /*project(':iog-web-container')*/
     )
@@ -46,7 +43,7 @@ jar {
     }.join(' ')
 
     manifest {
-        attributes 'Main-Class': 'com.shangpin.iog.brunarosso.Startup'
+        attributes 'Main-Class': 'com.shangpin.iog.brunarosso.stock.StockClientImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
         attributes 'Class-Path': '. ' +  manifestCp
     }
