--- a/gilt/build.gradle
+++ b/gilt/build.gradle
@@ -5,6 +5,8 @@ dependencies {
             "org.mybatis:mybatis-spring:1.2.0",
             "mysql:mysql-connector-java:5.1.21",
             "commons-dbcp:commons-dbcp:1.4",
+            "net.sf.json-lib:json-lib:2.2:jdk15",
+            "com.google.code.gson:gson:2.2.2",
             project(':project-common'),
             project(':project-dao'),
             project(':iog-common-product')
