--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -45,7 +45,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.acanfora.Startup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. conf ' +  manifestCp
+        attributes 'Class-Path': '.  ' +  manifestCp
     }
 }
 
