修改coltorti 和 spinnaker 错误

--- a/acanfora/build.gradle
+++ b/acanfora/build.gradle
@@ -30,8 +30,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib ,   copyResources
-    exclude ("**/*.properties")
+    dependsOn copyToLib
+//    exclude ("**/*.properties")
 //    from {
 //        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
 
