修改导出 修改o 过滤特殊符号

--- a/brunarosso-stock/build.gradle
+++ b/brunarosso-stock/build.gradle
@@ -13,9 +13,9 @@ dependencies {
             /*"com.thoughtworks.xstream:xstream:1.4.7",*/
             "commons-net:commons-net:1.4.1",
             "org.jdom:jdom:2.0.2",
+            "com.enterprisedt:edtftp:1.0",
+            project(':project-common'),
 
-            project(':project-common'),
-            project(':project-common'),
             project(':openapi-ice')
     )
 
