--- a/galiano-stock/build.gradle
+++ b/galiano-stock/build.gradle
@@ -11,7 +11,7 @@ dependencies {
     compile(
             project(':project-common'),
 
-            project(':openapi-ice')
+            project(':iog-sop')
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
