--- a/vela-stock/build.gradle
+++ b/vela-stock/build.gradle
@@ -13,7 +13,8 @@ dependencies {
             "com.google.code.gson:gson:2.3.1",
             project(':project-common'),
 
-            project(':openapi-ice')
+            project(':iog-sop')
+
     )
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
