--- a/coltorti/build.gradle
+++ b/coltorti/build.gradle
@@ -12,18 +12,11 @@ dependencies{
 }
 
 
-task copyToLib( type: Copy ) {
-    into "$buildDir/libs/lib"
-    from configurations.compile
-}
 
 jar {
 
-    dependsOn copyToLib
-//    from {
-//        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
-
-//    }
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -33,6 +26,6 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.ColtortiStartup'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. '+ manifestCp
+        attributes 'Class-Path': '. ./conf/ '+ manifestCp
     }
 }
