--- a/ebay/build.gradle
+++ b/ebay/build.gradle
@@ -19,14 +19,11 @@ dependencies {
 		"com.google.code.gson:gson:2.3.1",
 		)
 }
-task copyToLib( type: Copy ) {
-	into "$buildDir/libs/lib"
-	from configurations.compile
-}
 
 jar {
 
-	dependsOn copyToLib
+	dependsOn copyToLib , copyResources
+	exclude ("**/*.properties")
 
 	def manifestCp = configurations.compile.files.collect  {
 		File file = it
@@ -35,6 +32,6 @@ jar {
 
 	manifest {
 		attributes 'Main-Class': 'com.shangpin.iog.ebay.EbayStartUp'
-		attributes 'Class-Path': '. '+ manifestCp
+		attributes 'Class-Path': '. ./conf/ '+ manifestCp
 	}
 }
