--- a/galiano-stock/build.gradle
+++ b/galiano-stock/build.gradle
@@ -1,10 +1,6 @@
 
 
 
-task copyToLib( type: Copy ) {
-    into "$buildDir/libs/lib"
-    from configurations.compile
-}
 
 
 dependencies {
@@ -20,7 +16,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
 
     def manifestCp = configurations.compile.files.collect  {
@@ -31,7 +28,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.galiano.stock.GrabStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
