--- a/ostore-stock/build.gradle
+++ b/ostore-stock/build.gradle
@@ -1,10 +1,6 @@
 
 
 
-task copyToLib( type: Copy ) {
-    into "$buildDir/libs/lib"
-    from configurations.compile
-}
 
 
 
@@ -21,8 +17,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -32,7 +28,7 @@ jar {
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.ostore.stock.OstoreStockImp'
 //        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/ ' +  manifestCp
     }
 }
 
