--- a/vela-stock/build.gradle
+++ b/vela-stock/build.gradle
@@ -2,10 +2,7 @@
 
 
 
-task copyToLib( type: Copy ) {
-    into "$buildDir/libs/lib"
-    from configurations.compile
-}
+
 
 
 dependencies {
@@ -22,8 +19,8 @@ dependencies {
 
 jar {
 
-    dependsOn copyToLib
-
+    dependsOn copyToLib , copyResources
+    exclude ("**/*.properties")
 
     def manifestCp = configurations.compile.files.collect  {
         File file = it
@@ -32,8 +29,7 @@ jar {
 
     manifest {
         attributes 'Main-Class': 'com.shangpin.iog.vela.stock.VelaStockImp'
-//        attributes 'Class-Path': new File(libPath).list().findAll { it.endsWith('.jar') }.collect { "$libPath/$it" }.join(' ')
-        attributes 'Class-Path': '. ' +  manifestCp
+        attributes 'Class-Path': '. ./conf/  ' +  manifestCp
     }
 }
 
